@@ -270,22 +270,6 @@ name|Logger
 import|;
 end_import
 
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|core
-operator|.
-name|SolrInfoMBean
-operator|.
-name|Category
-import|;
-end_import
-
 begin_comment
 comment|/**  * SolrIndexSearcher adds schema awareness and caching functionality  * over the lucene IndexSearcher.  *  * @version $Id$  * @since solr 0.9  */
 end_comment
@@ -3497,16 +3481,33 @@ init|=
 literal|null
 decl_stmt|;
 name|int
-name|maxDoc
+name|maxDocRequested
 init|=
 name|offset
 operator|+
 name|len
 decl_stmt|;
+comment|// check for overflow, and check for # docs in index
+if|if
+condition|(
+name|maxDocRequested
+argument_list|<
+literal|0
+operator|||
+name|maxDocRequested
+argument_list|>
+name|maxDoc
+argument_list|()
+condition|)
+name|maxDocRequested
+operator|=
+name|maxDoc
+argument_list|()
+expr_stmt|;
 name|int
 name|supersetMaxDoc
 init|=
-name|maxDoc
+name|maxDocRequested
 decl_stmt|;
 name|DocList
 name|superset
@@ -3708,7 +3709,7 @@ comment|// next resultWindowSize for better caching.
 comment|// handle 0 special case as well as avoid idiv in the common case.
 if|if
 condition|(
-name|maxDoc
+name|maxDocRequested
 operator|<
 name|queryResultWindowSize
 condition|)
@@ -3724,7 +3725,7 @@ name|supersetMaxDoc
 operator|=
 operator|(
 operator|(
-name|maxDoc
+name|maxDocRequested
 operator|-
 literal|1
 operator|)
@@ -3735,6 +3736,16 @@ literal|1
 operator|)
 operator|*
 name|queryResultWindowSize
+expr_stmt|;
+if|if
+condition|(
+name|supersetMaxDoc
+operator|<
+literal|0
+condition|)
+name|supersetMaxDoc
+operator|=
+name|maxDocRequested
 expr_stmt|;
 block|}
 block|}
@@ -4062,13 +4073,34 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-specifier|final
 name|int
-name|lastDocRequested
+name|last
 init|=
 name|offset
 operator|+
 name|len
+decl_stmt|;
+if|if
+condition|(
+name|last
+argument_list|<
+literal|0
+operator|||
+name|last
+argument_list|>
+name|maxDoc
+argument_list|()
+condition|)
+name|last
+operator|=
+name|maxDoc
+argument_list|()
+expr_stmt|;
+specifier|final
+name|int
+name|lastDocRequested
+init|=
+name|last
 decl_stmt|;
 name|int
 name|nDocsReturned
@@ -4764,13 +4796,34 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-specifier|final
 name|int
-name|lastDocRequested
+name|last
 init|=
 name|offset
 operator|+
 name|len
+decl_stmt|;
+if|if
+condition|(
+name|last
+argument_list|<
+literal|0
+operator|||
+name|last
+argument_list|>
+name|maxDoc
+argument_list|()
+condition|)
+name|last
+operator|=
+name|maxDoc
+argument_list|()
+expr_stmt|;
+specifier|final
+name|int
+name|lastDocRequested
+init|=
+name|last
 decl_stmt|;
 name|int
 name|nDocsReturned
