@@ -211,6 +211,9 @@ Bug Fixes
  
 12. SOLR-393: Removed duplicate contentType from raw-schema.jsp. (bill)
 
+13. SOLR-413: Requesting a large numbers of documents to be returned (limit)
+    can result in an out-of-memory exception, even for a small index. (yonik)
+
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
     build scripts to make two jars: apache-solr-1.3.jar and 
